--- a/mandelbulber2/formula/ui/mandelbar_v2.ui
+++ b/mandelbulber2/formula/ui/mandelbar_v2.ui
@@ -455,7 +455,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;Mandelbar or Tricorn version based on pow2 code from Davis Makin&lt;br&gt;ref: https://www.facebook.com/david.makin.7&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mandelbarV2_sphereGrid.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
