--- a/mandelbulber2/formula/ui/transf_box_tiling_v2.ui
+++ b/mandelbulber2/formula/ui/transf_box_tiling_v2.ui
@@ -726,7 +726,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;Box Tiling 4d&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/transfBoxTilingV3_mandelnest.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
