--- a/mandelbulber2/formula/ui/transf_add_spherical_invert.ui
+++ b/mandelbulber2/formula/ui/transf_add_spherical_invert.ui
@@ -383,7 +383,7 @@ scales</string>
         <property name="text">
          <string notr="true">&lt;p&gt;Adds to z the spherical inversion of z&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mbulbTailsV2_TaddSphericalInvert;.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/transfAddSphericalInvert menger.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mandelbulbSinCosV4_addSphInv.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mbulbTailsV2_TaddSphericalInvert;.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/transfAddSphericalInvert menger.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
