--- a/mandelbulber2/formula/ui/mandelbulb_pow2_v1.ui
+++ b/mandelbulber2/formula/ui/mandelbulb_pow2_v1.ui
@@ -484,7 +484,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;Non-trig mandelbulber pow2 version based on pow2 code from Davis Makin&lt;br&gt;ref: https://www.facebook.com/david.makin.7&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mbulbPow2_v1.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mbulbPow2_v1-001.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mbulbPow2_v1.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
