--- a/mandelbulber2/formula/ui/transf_difs_clip_custom.ui
+++ b/mandelbulber2/formula/ui/transf_difs_clip_custom.ui
@@ -1465,7 +1465,7 @@ scale:</string>
         <property name="text">
          <string notr="true">&lt;p&gt;TransfDIFSClipCustom&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsTorusMenger_T-DifsClipCustom.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsTorusMenger_T-DifsClipCustom_001.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
