--- a/mandelbulber2/formula/ui/transf_difs_helix_menger.ui
+++ b/mandelbulber2/formula/ui/transf_difs_helix_menger.ui
@@ -1887,7 +1887,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;TransfDIFSHelixMenger based on fragmentarium code by knighty (jan 2012)&lt;br&gt;M3D difs code by darkbeam&lt;br&gt;and http://www.iquilezles.org/www/articles/distfunctions/distfunctions.htm&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_DIFS Helix Menger 001.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsHelixMenger.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsHelixMenger_001.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsHelixMenger_002.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_DIFS Helix Menger 001.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
