--- a/mandelbulber2/formula/ui/transf_difs_helix_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_helix_v2.ui
@@ -1409,7 +1409,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;TransfDifsHelixV2Iteration  fragmentarium code, mdifs by knighty (jan 2012)&lt;br&gt;M3D difs code by darkbeam&lt;br&gt;and http://www.iquilezles.org/www/articles/distfunctions/distfunctions.htm&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsHelixV2.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsHelixV2_001.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
